--- a/mpd_oled_fifo.conf
+++ b/mpd_oled_fifo.conf
@@ -3,7 +3,7 @@
 audio_output {
         type            "fifo"
         name            "mpd_oled_fifo"
-        path            "/tmp/mpd_oled"
+        path            "/tmp/mpd_oled_fifo"
         format          "44100:16:2"
         #buffer_time     "500000"
 }
